--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,8 +4,6 @@
     <ul class="navitems">
         <li><a href = "index.html">Home</a></li>
         <li><a href = "drones.html">Drones</a></li>
-        <li><a href = "#">Nav3</a></li>
-        <li><a href = "#">helloooo world</a></li>
-        <li><a href = "#">sexizone</a></li>
+        <li><a href = "music.html">Music</a></li>
     </ul>
 </div>
