--- a/components/navbar.html
+++ b/components/navbar.html
@@ -2,8 +2,9 @@
     <img src="./images/mysticToaster.jpg" alt ="mysticToaster" class = "mysticToaster"/>
     <h1>Morgan Mars' Website</h1>
     <ul class="navitems">
-        <li><a href = "index.html">Home</a></li>
-        <li><a href = "drones.html">Drones</a></li>
-        <li><a href = "music.html">Music</a></li>
+        <li><a href = "index.html" title="Home page">Home</a></li>
+        <li><a href = "drones.html" title="Drones">Drones</a></li>
+        <li><a href = "music.html" title="My music">Music</a></li>
+        <li><a href = "joke.html" title="A random joke">Joke</a></li>
     </ul>
 </div>
